modules/main.tf
data "aws_availability_zones" "available" {}


resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"

   tags = {
    Name = "main-vpc"
  }
}

# Create Public Subnets
resource "aws_subnet" "public1" {
  vpc_id     = aws_vpc.main.id
  cidr_block = "10.0.1.0/24"
  map_public_ip_on_launch = true
  tags = {
    Name = "public-subnet-1"
  }
}



# Create Internet Gateway
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id
  tags = {
    Name = "main-igw"
  }
}


# Create Route Tables
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }
   tags = {
    Name = "public-route-table"
  }
}



# Associate Route Tables with Subnets
resource "aws_route_table_association" "public1" {
  subnet_id      = aws_subnet.public1.id
  route_table_id = aws_route_table.public.id
}







# Create Security Groups
resource "aws_security_group" "web_sg" {
  vpc_id = aws_vpc.main.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

   ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] 
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

   tags = {
    Name = "web-sg"
  }
}


# Create EC2 Instances for Web Servers with Database Connection Example
resource "aws_instance" "web1" {
  ami              = "ami-053a45fff0a704a47"
  instance_type    = "t2.micro"
  subnet_id        = aws_subnet.public1.id
  security_groups  = [aws_security_group.web_sg.id]

  tags = {
    Name = "web-server-1"
  }
}
